--- a/base_game/export_presets.cfg
+++ b/base_game/export_presets.cfg
@@ -7,7 +7,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="C:/Users/Gero/Desktop/GearedForFear(32-bit).exe"
+export_path="C:/Users/Gero/Desktop/GearedForFear.exe"
 script_export_mode=1
 script_encryption_key=""
 
@@ -15,8 +15,8 @@ script_encryption_key=""
 
 custom_template/debug=""
 custom_template/release=""
-binary_format/64_bits=true
-binary_format/embed_pck=true
+binary_format/64_bits=false
+binary_format/embed_pck=false
 texture_format/bptc=false
 texture_format/s3tc=true
 texture_format/etc=false
@@ -33,8 +33,8 @@ codesign/description=""
 codesign/custom_options=PoolStringArray(  )
 application/modify_resources=false
 application/icon=""
-application/file_version="0.0.0.0"
-application/product_version="0.0.0.0"
+application/file_version="0.1.0.0"
+application/product_version="0.1.0.0"
 application/company_name=""
 application/product_name=""
 application/file_description=""
@@ -132,7 +132,7 @@ script_encryption_key=""
 
 custom_template/debug=""
 custom_template/release=""
-binary_format/64_bits=true
+binary_format/64_bits=false
 binary_format/embed_pck=true
 texture_format/bptc=false
 texture_format/s3tc=true
