--- a/base_game/export_presets.cfg
+++ b/base_game/export_presets.cfg
@@ -15,7 +15,7 @@ script_encryption_key=""
 
 custom_template/debug=""
 custom_template/release=""
-binary_format/64_bits=true
+binary_format/64_bits=false
 binary_format/embed_pck=true
 texture_format/bptc=false
 texture_format/s3tc=true
@@ -33,8 +33,9 @@ codesign/description=""
 codesign/custom_options=PoolStringArray(  )
 application/modify_resources=false
 application/icon=""
-application/file_version="0.0.0.0"
-application/product_version="0.0.0.0"
+application/icon_interpolation=4
+application/file_version="0.4.0.0"
+application/product_version="0.4.0.0"
 application/company_name=""
 application/product_name=""
 application/file_description=""
@@ -61,6 +62,7 @@ custom_template/release=""
 application/name=""
 application/info="Made with Godot Engine"
 application/icon=""
+application/icon_interpolation=4
 application/identifier="com.gearedforfear"
 application/signature=""
 application/app_category="Games"
@@ -68,22 +70,10 @@ application/short_version="0.0"
 application/version="0.0.0"
 application/copyright=""
 display/high_res=false
-privacy/microphone_usage_description=""
-privacy/camera_usage_description=""
-privacy/location_usage_description=""
-privacy/address_book_usage_description=""
-privacy/calendar_usage_description=""
-privacy/photos_library_usage_description=""
-privacy/desktop_folder_usage_description=""
-privacy/documents_folder_usage_description=""
-privacy/downloads_folder_usage_description=""
-privacy/network_volumes_usage_description=""
-privacy/removable_volumes_usage_description=""
-codesign/enable=true
+codesign/codesign=1
 codesign/identity=""
-codesign/timestamp=true
-codesign/hardened_runtime=true
-codesign/replace_existing_signature=true
+codesign/certificate_file=""
+codesign/certificate_password=""
 codesign/entitlements/custom_file=""
 codesign/entitlements/allow_jit_code_execution=false
 codesign/entitlements/allow_unsigned_executable_memory=false
@@ -107,10 +97,23 @@ codesign/entitlements/app_sandbox/files_pictures=0
 codesign/entitlements/app_sandbox/files_music=0
 codesign/entitlements/app_sandbox/files_movies=0
 codesign/custom_options=PoolStringArray(  )
-notarization/enable=false
+notarization/notarization=0
 notarization/apple_id_name=""
 notarization/apple_id_password=""
 notarization/apple_team_id=""
+notarization/api_uuid=""
+notarization/api_key=""
+privacy/microphone_usage_description=""
+privacy/camera_usage_description=""
+privacy/location_usage_description=""
+privacy/address_book_usage_description=""
+privacy/calendar_usage_description=""
+privacy/photos_library_usage_description=""
+privacy/desktop_folder_usage_description=""
+privacy/documents_folder_usage_description=""
+privacy/downloads_folder_usage_description=""
+privacy/network_volumes_usage_description=""
+privacy/removable_volumes_usage_description=""
 texture_format/s3tc=true
 texture_format/etc=false
 texture_format/etc2=false
@@ -124,7 +127,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="C:/Users/Gero/Desktop/GearedForFear.x86"
+export_path="C:/Users/Gero/Desktop/GearedForFear.x86_64"
 script_export_mode=1
 script_encryption_key=""
 
