Update game files to 0.8.0

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,53 @@ export_presets.cfg
 # Mono-specific ignores
 .mono/
 data_*/
+
+*.import
+*.ico
+/base_game/resources/sounds
+/base_game/resources/fonts
+/base_game/resources/materials/world/maps
+base_game/resources/materials/world/decorations/icicle.material
+base_game/resources/materials/world/decorations/desert_tornado.material
+base_game/resources/materials/world/decorations/cactus_1.material
+base_game/resources/materials/world/decorations/cactus_0.material
+base_game/resources/materials/weapon_components/grenade.material
+base_game/resources/materials/weapon_components/chainsaw.material
+base_game/resources/materials/weapon_components/missile.material
+base_game/resources/materials/cameras_&_ui/heart.material
+base_game/resources/materials/cameras_&_ui/hud_bullet.material
+base_game/resources/meshes/vehicles/well_raised.tres
+base_game/resources/meshes/vehicles/warm_welcome.tres
+base_game/resources/meshes/vehicles/turbulence.tres
+base_game/resources/meshes/vehicles/suicide_door.tres
+base_game/resources/meshes/vehicles/restless.tres
+base_game/resources/meshes/vehicles/metal_undertow.tres
+base_game/resources/meshes/vehicles/grave_mistake.tres
+base_game/resources/meshes/vehicles/fungibber.tres
+base_game/resources/meshes/vehicles/eternal_bond_front.tres
+base_game/resources/meshes/vehicles/eternal_bond_back.tres
+base_game/resources/meshes/vehicles/chains_awe.tres
+base_game/resources/materials/vehicles/ca_wheel.material
+base_game/resources/materials/vehicles/chains_awe.material
+base_game/resources/materials/vehicles/eb_wheel.material
+base_game/resources/materials/vehicles/eternal_bond.material
+base_game/resources/materials/vehicles/fu_wheel.material
+base_game/resources/materials/vehicles/fungibber.material
+base_game/resources/materials/vehicles/gm_wheel.material
+base_game/resources/materials/vehicles/grave_mistake.material
+base_game/resources/materials/vehicles/metal_undertow.material
+base_game/resources/materials/vehicles/mu_wheel.material
+base_game/resources/materials/vehicles/re_wheel.material
+base_game/resources/materials/vehicles/restless.material
+base_game/resources/materials/vehicles/sd_wheel.material
+base_game/resources/materials/vehicles/suicide_door.material
+base_game/resources/materials/vehicles/tu_wheel.material
+base_game/resources/materials/vehicles/turbulence.material
+base_game/resources/materials/vehicles/warm_welcome.material
+base_game/resources/materials/vehicles/well_raised.material
+base_game/resources/materials/vehicles/wr_wheel.material
+base_game/resources/materials/vehicles/ww_wheel.material
+base_game/resources/images/splash.png
+base_game/resources/images/money.tres
+base_game/resources/images/icon.png
+base_game/resources/images/explosion.tres
